--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,19 @@
 <!--*******************************************************************************
     Works with Arduino amdtpsNano.ino.
 
-    Revision 1.2
+    Revision 2.7
+        2.7 - Added BigLeft and BigRight turn buttons
+        2.6 - Fixed 2 digit command - was single digit
+        2.5 - Fixed forward and reverse commands and aligned rev with Arduino rev 2.5
+            - Send ACK when receive enq
+        1.3 - Added enableTx and Ack to UartService. Turn buttons on/off on connection/disconnection
+
         1.2 - Added speed control and turn while moving buttons.  Changed bunch of colors and positions.
 
         1.1 - Reversed Direction buttons and servo up/down commands issued due to putting servo on front o
         of robot instead of back.
     TODO:
-    -  Implement distance sensor - on board for now
-    -  Implement and mount brush motor - DECIDE ON SIDE OR FRONT!
+    - Clean up setOnClickListeners - they all do about the same thing with only a number change
 
 
 *********************************************************************************-->
@@ -26,7 +31,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity android:name="e.kerry.kerobotnrf.MainActivity"
             android:configChanges="orientation"
             android:screenOrientation="unspecified">
 
@@ -37,7 +42,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DeviceListActivity"
+            android:name="e.kerry.kerobotnrf.DeviceListActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Dialog"
             android:configChanges="orientation"
@@ -46,7 +51,7 @@
     </activity>
         <service
             android:enabled="true"
-            android:name=".UartService" />
+            android:name="e.kerry.kerobotnrf.UartService" />
     </application>
 
 </manifest>
